fix: Set item align of container to center.

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     flex-direction: column;
     flex: 1;
     justify-content: space-between;
+    align-items: center;
 }
 .header-content {
     padding: 20px;
